# SHIELD.OS

./: .gitignore  README.md  capacitor.config.ts  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
.github/workflows/: android.yml  deploy.yml  desktop.yml
android-native/: AndroidManifest.permissions.xml
android-native/src/main/java/os/shield/droidsentry/: MainActivity.kt  ShieldPlugin.kt
assets/: index-3WmakY-4.css  index-9PZdygcn.js  index-Bqr4d0y0.css  index-CT75158d.js  index-DmZ1N5Pv.js  index-G6Zk-PHp.css  index-qq465VZv.js
scripts/: setup-android.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: connections.rs  main.rs  processes.rs  scanner.rs  threats.rs
src/capabilities/: android.ts  index.ts  tauri.ts  types.ts  web.ts
src/lib/: firebase.ts
src/modules/: ActivityHistory.tsx  DefensePlaybook.tsx  RFDetection.tsx  Surveillance.tsx
