[package]
name = "shield-os"
version = "0.1.0"
description = "SHIELD.OS desktop agent"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
thiserror = "2"
netstat2 = "0.11"
sha2 = "0.10"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
dirs = "5"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
